# REPO_KNOWLEDGE

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  JULES_ROADMAP_ANALYSIS.md  LICENSE  README.md  debug_gpc.py  docker-compose.yml  index.py  inspect_db.py  inspect_scan.py  kill_mcps.py  manage.bat  manage.py  memory_helper.py  parse_tables.py  pyproject.toml  read_tables.py  register_startup.py  reindex_all.py  requirements.txt  test_gpc.py  test_search.py  watcher.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  663fe16dd92f_add_pgvector.py
docs/: runbook.md
docs/adr/: 001-qdrant-client-version-pin.md  002-redis-caching-layer.md  003-sentence-transformers-reranking.md  004-tree-sitter-ast-parsing.md
issues/: 01-sse-transport.md  02-tree-sitter-chunking.md  03-infrastructure-chunkers.md
logs/: repo_knowledge.jsonl
src/repo_knowledge/: __init__.py  cache.py  chunker.py  config.py  embedder.py  knowledge.py  logger.py  mcp_server.py  postgres_store.py  reranker.py  scanner.py  store.py  tracer.py
src/repo_knowledge/web_ui/: index.html  server.py
tests/: README.md  conftest.py  run_mcp_test.py  test_cache.py  test_chunker.py  test_knowledge_unit.py  test_logger.py  test_mcp.py  test_mcp_timeout.py  test_memory.py  test_migrations.py  test_postgres.py  test_reranker.py  test_rrf.py  test_scanner.py  test_search_integration.py  test_store_unit.py  test_tracer.py
web_ui/: server.py
