[project]
name = "repo-knowledge"
version = "0.1.0"
requires-python = ">=3.12"
description = "Local-first semantic knowledge layer for codebases, exposed via MCP"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[project.optional-dependencies]
reranker = ["sentence-transformers"]
cache = ["redis"]
full = ["sentence-transformers", "redis"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
